--- a/6Payment.css
+++ b/6Payment.css
@@ -20,6 +20,10 @@ table img {
     margin: 5%;
 }
 
+.imgsize{
+    width:150px;
+    height:50px;
+}
 .Payment-table {
 
     background-color: whitesmoke
