--- a/8Contactus.css
+++ b/8Contactus.css
@@ -2,11 +2,11 @@ header{
     width: 100%;
 }
 
-dl h4{
+dl dt{
     background-color: #CE0C1A;
     border-radius: 5px;
     color: bisque;
-    padding: 5%;
+    padding: 1%;
 }
 
 body h2{
@@ -47,6 +47,8 @@ button{
     margin-right: auto;
     width: 100%;
     border-radius: 20px;
+    background-color: #CE0C1A;
+    color: whitesmoke;
 }
 
 #customer-container {
@@ -56,7 +58,7 @@ button{
 }
 
 button:hover{
-    background-color: #CE0C1A;
+    background-color: #ee0e1d;
     color: bisque;
     transform: scale(1.1);
     transition: all 0.25s ease-out;
@@ -65,6 +67,6 @@ button:hover{
 body p{
     border: #CE0C1A solid 1px;
     border-radius: 5px;
-    padding: 5%;
+    padding: 1%;
 }
 
